10-applications/fullstack-app/k8s/react/react-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: insi-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/use-forwarded-headers: "true"
    nginx.ingress.kubernetes.io/proxy-set-headers: |
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - app.insim2.local
    secretName: insi-tls
  rules:
  - host: app.insim2.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: react-service
            port:
              number: 80
